--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 
 <body>
-	<div class="card" style="width: 18rem;">
-	  <div class="card-body">
-	    <h5 class="card-title">CORS Demo</h5>
-	    <p class="card-text">Simple example to send a cross domain http request</p>
-	    <button id="login" type="button" class="btn btn-primary">Login</button>
-	  </div>
+	<div class="container-fluid">
+		<div class="card" style="width: 18rem;">
+		  <div class="card-body">
+		    <h5 class="card-title">CORS Demo</h5>
+		    <p class="card-text">Simple example to send a cross domain http request</p>
+		    <button id="login" type="button" class="btn btn-primary">Login</button>
+		  </div>
+		</div>
 	</div>
-	
 </body>
 
 <script>
