--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			},
 
 			headers: {
+				"Bearer Token": "this-bearer-string-was-found-in-the-request-header"
 			},
 
 			success: function(data) {
