--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		    <h5 class="card-title">CORS Demo</h5>
 		    <p class="card-text">Simple example to send a cross domain http request</p>
 		    <button id="login" type="button" class="btn btn-primary">Login</button>
-		    <p id="token" class="card-text"></p>
+		    <p class="mt-5" id="token" class="card-text"></p>
 		  </div>
 		</div>
 	</div>
