--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="card" style="width: 18rem;">
 		  <div class="card-body">
 		    <h5 class="card-title">CORS Demo</h5>
-		    <p class="card-text">Simple example to send a cross domain http request</p>
+		    <p class="card-text">Simple example to send a cross domain https request</p>
 		    <button id="login" type="button" class="btn btn-primary">Login</button>
 		    <p class="mt-5" id="token" class="card-text"></p>
 		  </div>
