--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		$('#token').html("");
 
 		$.ajax({
-			type: 'GET',
+			type: 'POST',
 			url: 'https://cors-springboot-solution-demo.herokuapp.com/login',
 			contentType: 'text/plain',
 
