--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<h1></h1>
 	<div class="container-fluid">
-		<div class="card" style="width: 18rem;">
+		<div class="card">
 		  <div class="card-body">
 		    <h5 class="card-title">CORS Demo</h5>
 		    <p class="card-text">Simple example to send a cross domain https request</p>
